--- a/lexicon.html
+++ b/lexicon.html
@@ -27,6 +27,7 @@
             else
                 para.className = "wrong_choice";
             ev.target.parentElement.appendChild(para);
+            document.getElementById(data).style.display = 'none';
         }
 	</script>
 </head>
