Fixed navigation/image links

--- a/receipe.html
+++ b/receipe.html
@@ -26,12 +26,12 @@
 	<table>
 		<tr>
 			<td>
-				<img src="images/smoer-stroesocker-vaniljsocker.jpg" alt="smör, strösocker, vaniljsocker" title="Smör, strösocker, vaniljsocker" />
+				<img src="image/smoer-stroesocker-vaniljsocker.jpg" alt="smör, strösocker, vaniljsocker" title="Smör, strösocker, vaniljsocker" />
 				<br>
 				<p>Smör, strösocker, vaniljsocker.</p>
 			</td>
 			<td>
-				<img src="images/smoer-socker-vispat.jpg" alt="smör och socker vispat" title="Smör och socker vispat" />
+				<img src="image/smoer-socker-vispat.jpg" alt="smör och socker vispat" title="Smör och socker vispat" />
 				<br>
 				<p>Smör och socker vispat.</p>
 			</td>
@@ -44,19 +44,19 @@
 	<ul class="spaceLargeTop">
 		<li>150 g <div class="popup" onclick="onOpenPopup(this)">smör
 					<span class="popuptext">
-						<img src="images/smör.jpg" width="150" height="150"/>
+						<img src="image/smör.jpg" width="150" height="150"/>
 						<p>زبدة</p>
 					</span>
 				  </div>
 		<li>1.5 dl <div class="popup" onclick="onOpenPopup(this)">strösocker
 					<span class="popuptext">
-						<img src="images/strösocker.jpg" width="150" height="150"/>
+						<img src="image/strösocker.jpg" width="150" height="150"/>
 						<p>كر,,"سك</p>
 					</span>
 				  </div>
 		<li>1 msk <div class="popup" onclick="onOpenPopup(this)">vaniljsocker
 					<span class="popuptext">
-						<img src="images/vaniljsocker.jpg" width="150" height="150"/>
+						<img src="image/vaniljsocker.jpg" width="150" height="150"/>
 					</span>
 				  </div>
 	</ul>
@@ -66,7 +66,7 @@
 	<table>
 		<tr>
 			<td>
-				<img src="images/vatten-snabbkaffepulver.jpg" alt="vatten och snabbkaffepulver" title="Vatten och snabbkaffepulver"/>
+				<img src="image/vatten-snabbkaffepulver.jpg" alt="vatten och snabbkaffepulver" title="Vatten och snabbkaffepulver"/>
 				<br>
 				<p>Vatten och snabbkaffepulver.</p>
 			</td>
@@ -86,12 +86,12 @@
 	<table>
 		<tr>
 			<td>
-				<img src="images/ingredienser-chokladbollssmet.jpg" alt="ingredienser till chokladbollssmeten tillsatta" title="Ingredienser till chokladbollssmeten tillsatta" />
+				<img src="image/ingredienser-chokladbollssmet.jpg" alt="ingredienser till chokladbollssmeten tillsatta" title="Ingredienser till chokladbollssmeten tillsatta" />
 				<br>
 				<p>Ingredienser till chokladbollssmeten tillsatta.</p>
 			</td>
 			<td>
-				<img src="images/chokladbollssmet.jpg" alt="chokladbollssmeten" title="Chokladbollssmeten" />
+				<img src="image/chokladbollssmet.jpg" alt="chokladbollssmeten" title="Chokladbollssmeten" />
 				<br>
 				<p>Chokladbollssmeten.</p>
 			</td>
@@ -120,12 +120,12 @@
 	<table>
 		<tr>
 			<td>
-				<img src="images/chokladboll-kokosflingor.jpg" alt="chokladboll och kokosflingor" title="Chokladboll och kokosflingor" />
+				<img src="image/chokladboll-kokosflingor.jpg" alt="chokladboll och kokosflingor" title="Chokladboll och kokosflingor" />
 				<br>
 				<p>Chokladboll och kokosflingor.</p>
 			</td>
 			<td>
-				<img src="images/chokladbollssmet.jpg" alt="chokladbollssmeten" title="Chokladbollssmeten" />
+				<img src="image/chokladbollssmet.jpg" alt="chokladbollssmeten" title="Chokladbollssmeten" />
 				<br>
 				<p>Chokladboll rullad i kokosflingor.</p>
 			</td>
@@ -149,7 +149,7 @@
 	<table>
 		<tr>
 			<td>
-				<img src="images/serverade-chokladbollar.jpg" alt="serverade chokladbollar" title="Serverade chokladbollar" />
+				<img src="image/serverade-chokladbollar.jpg" alt="serverade chokladbollar" title="Serverade chokladbollar" />
 				<br>
 				<p>Serverade chokladbollar.</p>
 			</td>
