--- a/viewRecipe.html
+++ b/viewRecipe.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+		<meta charset="UTF-8">
       <!--Import Google Icon Font-->
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	  
@@ -32,7 +33,16 @@
 		<div class="container ingredients-container">
 		
 		
-		<h4>Ingredienser</h4>
+		<div class="row">
+			<div class="col s8">
+				<h4>Ingredienser</h4>
+			</div>
+			<div class="col s4 right-align">
+				<a href="lexicon.html">
+					<i class="medium material-icons">play_arrow</i>
+				</a>
+			</div>
+		</div>
 		<ul class="collection">
 			<li class="collection-item">1 dl florsocker<a href="#!" class="secondary-content"><i class="material-icons recipe-info-button" data-ingredient-name="florsocker" >zoom_in</i></a></li>
 			<li class="collection-item">4 dl vetemjöl <a href="#!" class="secondary-content"><i class="material-icons recipe-info-button" data-ingredient-name="vetemjöl" >zoom_in</i></a></li>
