--- a/recipe-menu.html
+++ b/recipe-menu.html
@@ -32,7 +32,7 @@
 <div class="row">
     <div class="col s6 m4">
         <div class="card hoverable">
-            <a href="index.html">
+            <a href="viewRecipe.html">
                 <div class="card-image">
                     <img src="image/pannkakor.jpg" style="width: 100%">
                 </div>
@@ -44,7 +44,7 @@
     </div>
     <div class="col s6 m4">
         <div class="card hoverable">
-            <a href="index.html">
+            <a href="viewRecipe.html">
                 <div class="card-image">
                     <img src="image/torsk-i-ugn.jpg" style="width: 100%">
                 </div>
@@ -56,7 +56,7 @@
     </div>
     <div class="col s6 m4">
         <div class="card hoverable">
-            <a href="index.html">
+            <a href="viewRecipe.html">
                 <div class="card-image">
                     <img src="image/chokladbollar.jpg" style="width: 100%">
                 </div>
