Navigate back buttons

--- a/viewRecipe.html
+++ b/viewRecipe.html
@@ -20,7 +20,12 @@
 	  
 	  <nav>
 			<div class="nav-wrapper">
-				<font class="recipe-heading">Pannkakor med sylt</font>
+				<div class="left">
+					<a href="recipe-menu.html">
+						<i class="medium material-icons">skip_previous</i>
+					</a>
+				</div>
+				<span class="recipe-heading">Pannkakor med sylt</span>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 				</ul>
 			</div>
