--- a/lexicon.html
+++ b/lexicon.html
@@ -1,4 +1,6 @@
 <head>
+	<meta charset="UTF-8">
+
 	<!--Import Google Icon Font-->
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!--Import materialize.css-->
@@ -35,6 +37,11 @@
 
 <nav>
 	<div class="nav-wrapper">
+		<div class="left">
+			<a href="viewRecipe.html">
+				<i class="medium material-icons">skip_previous</i>
+			</a>
+		</div>
 		<a href="#" class="brand-logo">WordSoup</a>
 	</div>
 </nav>
