--- a/lexicon.html
+++ b/lexicon.html
@@ -22,14 +22,9 @@
         function drop(ev,correct) {
             ev.preventDefault();
             var data = ev.dataTransfer.getData("text");
-            var para = document.createElement("b");
-            para.innerHTML = document.getElementById(data).innerHTML;
-            if (data == correct)
-                para.className = "correct_choice";
-            else
-                para.className = "wrong_choice";
-            ev.target.parentElement.appendChild(para);
-            document.getElementById(data).style.display = 'none';
+            word_card = document.getElementById(data);
+            word_card.className += ' ' + (data == correct ? 'correct_choice' : 'wrong_choice');
+            ev.target.parentElement.appendChild(word_card);
         }
 	</script>
 </head>
@@ -48,22 +43,24 @@
 
 <div class="section center-align">
 	<div class="row">
-		<div class="col s6 lexicon-image" ondrop="drop(event, 'apple')" ondragover="allowDrop(event)"><img src="image/apple.jpg" height="150"/></div>
-		<div class="col s6 lexicon-image" ondrop="drop(event, 'orange')" ondragover="allowDrop(event)"><img src="image/orange.jpg" height="150"/></div>
+		<div class="col s6 lexicon-image" ondrop="drop(event, 'apple')" ondragover="allowDrop(event)"><img src="image/apple.jpg"></div>
+		<div class="col s6 lexicon-image" ondrop="drop(event, 'orange')" ondragover="allowDrop(event)"><img src="image/orange.jpg"></div>
 	</div>
 	<div class="row">
-		<div class="col s6 lexicon-image" ondrop="drop(event, 'grapes')" ondragover="allowDrop(event)"><img src="image/grapes.jpg" height="150"/></div>
-		<div class="col s6 lexicon-image" ondrop="drop(event, 'plum')" ondragover="allowDrop(event)"><img src="image/plum.jpg" height="150"/></div>
+		<div class="col s6 lexicon-image" ondrop="drop(event, 'grapes')" ondragover="allowDrop(event)"><img src="image/grapes.jpg"></div>
+		<div class="col s6 lexicon-image" ondrop="drop(event, 'plum')" ondragover="allowDrop(event)"><img src="image/plum.jpg"></div>
 	</div>
 </div>
 
-<div class="wordclound">
-	<div id="apple" class="word" draggable="true" ondragstart="drag(event)">apple</div>
-	<div id="orange" class="word" draggable="true" ondragstart="drag(event)">orange</div>
-	<div id="ketchup" class="word" draggable="true" ondragstart="drag(event)">ketchup</div>
-	<div id="plum" class="word" draggable="true" ondragstart="drag(event)">plum</div>
-	<div id="grapes" class="word" draggable="true" ondragstart="drag(event)">grapes</div>
-	<div id="wine" class="word" draggable="true" ondragstart="drag(event)">wine</div>
-	<div id="cheese" class="word" draggable="true" ondragstart="drag(event)">cheese</div>
+<div class="row">
+	<div class="col s12">
+	<div id="apple" class="word card" draggable="true" ondragstart="drag(event)">apple</div>
+	<div id="orange" class="word card" draggable="true" ondragstart="drag(event)">orange</div>
+	<div id="ketchup" class="word card" draggable="true" ondragstart="drag(event)">ketchup</div>
+	<div id="plum" class="word card" draggable="true" ondragstart="drag(event)">plum</div>
+	<div id="grapes" class="word card" draggable="true" ondragstart="drag(event)">grapes</div>
+	<div id="wine" class="word card" draggable="true" ondragstart="drag(event)">wine</div>
+	<div id="cheese" class="word card" draggable="true" ondragstart="drag(event)">cheese</div>
+	</div>
 </div>
 </body>
