--- a/lexicon.html
+++ b/lexicon.html
@@ -1,5 +1,6 @@
 <head>
 	<meta charset="UTF-8">
+	<title>WordSoup</title>
 
 	<!--Import Google Icon Font-->
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
