--- a/viewRecipe.html
+++ b/viewRecipe.html
@@ -2,6 +2,7 @@
   <html>
     <head>
 		<meta charset="UTF-8">
+		<title>WordSoup</title>
       <!--Import Google Icon Font-->
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	  
