--- a/recipe-menu.html
+++ b/recipe-menu.html
@@ -5,7 +5,7 @@
     <title>WordSoup</title>
 
     <!--Import Google Icon Font-->
-    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/master.css"  media="screen,projection"/>
