--- a/exercise-words.html
+++ b/exercise-words.html
@@ -17,20 +17,18 @@
 </head>
 <body>
 
-<nav>
-    <div class="nav-wrapper">
-        <a href="#" class="brand-logo">WordSoup</a>
-    </div>
-</nav>
+  <nav>
+  	<div class="nav-wrapper">
+  		<div class="left">
+  			<a href="#">
+  				<i class="medium material-icons">skip_previous</i>
+  			</a>
+  		</div>
+  		<a href="#" class="brand-logo">Träna ord</a>
+  	</div>
+  </nav>
 
-<div class="row">
-    <div class="col s6">
-        <h2>Träna ord</h2>
-    </div>
-    <div class="col s6" dir="rtl">
-        <h2>الكلمات القطار</h2>
-    </div>
-</div>
+
 
 <div class="row">
   <div  class="col s12">
