--- a/teachRecipe.html
+++ b/teachRecipe.html
@@ -8,7 +8,7 @@
 
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-	  <link rel="stylesheet" type="text/css" href="css/master.css" />
+	    <link rel="stylesheet" type="text/css" href="css/master.css" />
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -20,7 +20,7 @@
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
-      
+
 	  <nav>
 			<div class="nav-wrapper">
 				<div class="left">
@@ -69,7 +69,7 @@
 		</div>
 	</div>
   <div class="row">
-    <a class="col s12 waves-effect waves-light btn" href="lexicon.html">Träna ord</a>
+    <a class="col s12 waves-effect waves-light btn"><i class="material-icons right">games</i>Träna ord</a>
   </div>
 
 	<script>
@@ -88,7 +88,6 @@
             });
 						$('#ingredients').append('<li class="collection-item"> <font class="translated-word" data-translation="'+translation+'">'+ingredient.item+' </font> <img src="image/'+ingredient.item+'.jpg" width="100%"></li>');
 						listedIngredients.push(ingredient.item);
-
 					}
 				});
 			});
