Navigation fixes, arrow-left

--- a/exercise-words.html
+++ b/exercise-words.html
@@ -17,17 +17,16 @@
 </head>
 <body>
 
-  <nav>
-  	<div class="nav-wrapper">
-  		<div class="left">
-  			<a href="#">
-  				<i class="medium material-icons">skip_previous</i>
-  			</a>
-  		</div>
-  		<a href="#" class="brand-logo">Träna ord</a>
-  	</div>
-  </nav>
-
+<nav>
+    <div class="nav-wrapper">
+        <div class="left">
+            <a href="viewRecipe.html">
+                <i class="fa fa-arrow-left"></i>
+            </a>
+        </div>
+        <a href="#" class="brand-logo">Träna ord</a>
+    </div>
+</nav>
 
 <div class="row">
 </div>
@@ -43,7 +42,7 @@
 </div>
 <div class="row">
   <div class="col s12">
-    <a href="#" class="col s10 offset-s1 waves-effect waves-light btn-large"><i class="fa fa-window-minimize right" aria-hidden="true"></i><i class="fa fa-arrow-right right" aria-hidden="true"></i><i class="fa fa-list right" aria-hidden="true"></i>Hitta ord</a>
+    <a href="gaps.html" class="col s10 offset-s1 waves-effect waves-light btn-large"><i class="fa fa-window-minimize right" aria-hidden="true"></i><i class="fa fa-arrow-right right" aria-hidden="true"></i><i class="fa fa-list right" aria-hidden="true"></i>Hitta ord</a>
   </div>
 </div>
 
