--- a/lexicon.html
+++ b/lexicon.html
@@ -22,8 +22,8 @@
 <nav>
 	<div class="nav-wrapper">
 		<div class="left">
-			<a href="viewRecipe.html">
-				<i class="medium material-icons">skip_previous</i>
+			<a href="exercise-words.html">
+				<i class="fa fa-arrow-left"></i>
 			</a>
 		</div>
 		<a href="#" class="brand-logo">WordSoup</a>
