--- a/teachRecipe.html
+++ b/teachRecipe.html
@@ -25,7 +25,7 @@
 			<div class="nav-wrapper">
 				<div class="left">
 					<a href="recipe-menu.html">
-						<i class="medium material-icons">skip_previous</i>
+						<i class="fa fa-arrow-left"></i>
 					</a>
 				</div>
 				<span class="recipe-heading">Pannkakor med sylt</span>
