--- a/viewRecipe.html
+++ b/viewRecipe.html
@@ -25,7 +25,7 @@
 			<div class="nav-wrapper">
 				<div class="left">
 					<a href="recipe-menu.html">
-						<i class="medium material-icons">skip_previous</i>
+						<i class="fa fa-arrow-left"></i>
 					</a>
 				</div>
 				<span class="recipe-heading" id="recipe-name"></span>
@@ -40,6 +40,7 @@
 
 	  <div class="ingredient-popup-hiddendiv"></div>
 
+	  <div class="section">
 	  <div class="row">
 		<div class="col s12">
 		<div class="container ingredients-container">
@@ -65,6 +66,7 @@
 
 		</div>
 	</div>
+	  </div>
 
 
 	<div class="card ingredient-popup-card red lighten-4">
