--- a/gaps.html
+++ b/gaps.html
@@ -7,6 +7,7 @@
 	<!--Import materialize.css-->
 	<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 	<link type="text/css" rel="stylesheet" href="css/master.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="css/font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css">
 	<!--Let browser know website is optimized for mobile-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -21,8 +22,8 @@
 <nav>
 	<div class="nav-wrapper">
 		<div class="left">
-			<a href="viewRecipe.html">
-				<i class="medium material-icons">skip_previous</i>
+			<a href="exercise-words.html">
+				<i class="fa fa-arrow-left"></i>
 			</a>
 		</div>
 		<a href="#" class="brand-logo">Hitta ord</a>
