--- a/viewRecipe.html
+++ b/viewRecipe.html
@@ -34,7 +34,7 @@
 			</div>
 		</nav>
 		
-		<div class="train-recipe-button" href="exercise-words.html"> <a class="btn teal waves-effect waves-light" href="exercise-words.html"> Träna ord <span class="glyphicons glyphicons-dumbbell"></span></a> </div>
+		<div class="train-recipe-button" href="exercise-words.html"> <a class="btn teal waves-effect waves-light" href="exercise-words.html"> <font>Träna ord</font> <img class="valign-center" style="width: 20px;height:20px;top: 13%" src="image/dumbbell.png"></a> </div>
 		
 		
 	  
