--- a/lexicon.html
+++ b/lexicon.html
@@ -15,6 +15,7 @@
 	<script src="js/jquery.ui.touch-punch.min.js"></script>
 
 	<link rel="stylesheet" href="css/lexicon.css">
+	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 	<script src="js/dragndrop.js"></script>
 </head>
 <body>
