--- a/teachRecipe.html
+++ b/teachRecipe.html
@@ -13,6 +13,7 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+		<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 	  <script type="text/javascript" src="recipe.js"></script>
     </head>
 
@@ -24,7 +25,7 @@
 	  <nav>
 			<div class="nav-wrapper">
 				<div class="left">
-					<a href="recipe-menu.html">
+					<a href="exercise-words.html">
 						<i class="fa fa-arrow-left"></i>
 					</a>
 				</div>
@@ -69,7 +70,7 @@
 		</div>
 	</div>
   <div class="row">
-    <a class="col s12 waves-effect waves-light btn"><i class="material-icons right">games</i>Träna ord</a>
+    <a class="col s12 waves-effect waves-light btn" href="lexicon.html"><i class="material-icons right">games</i>Träna ord</a>
   </div>
 
 	<script>
