--- a/viewRecipe.html
+++ b/viewRecipe.html
@@ -13,7 +13,8 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-	  <script type="text/javascript" src="recipe.js"></script>
+		<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+		<script type="text/javascript" src="recipe.js"></script>
     </head>
 
     <body>
