changed login labels to placeholders

--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
    <form class="col s12">
      <div class="row">
        <div class="input-field col s12">
-         <input id="password" type="email" class="validate">
-         <label for="password">E-mail</label>
+         <input placeholder="E-mail" id="password" type="email" class="validate">
        </div>
      </div>
      <div class="row">
        <div class="input-field col s12">
-         <input id="email" type="password" class="validate">
-         <label for="email">Password</label>
+         <input placeholder="Password" id="email" type="password" class="validate">
        </div>
      </div>
    </form>
