--- a/teachRecipe.html
+++ b/teachRecipe.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>WordSoup</title>
       <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
@@ -20,7 +20,7 @@
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
-      
+
 	  <nav>
 			<div class="nav-wrapper">
 				<div class="left">
