fixed 'träna ord' button

--- a/teachRecipe.html
+++ b/teachRecipe.html
@@ -70,7 +70,7 @@
 		</div>
 	</div>
   <div class="row">
-    <a class="col s12 waves-effect waves-light btn" href="lexicon.html"><i class="material-icons right">games</i>Träna ord</a>
+    <div class="train-recipe-button"> <a class="col s12 waves-effect waves-light btn" href="lexicon.html"><i class="material-icons right">games</i>Träna ord</a></div>
   </div>
 
 	<script>
