Swedish lexicon game words

--- a/lexicon.html
+++ b/lexicon.html
@@ -34,22 +34,22 @@
 <div class="container">
 <div class="section center-align dragndrop-game lexicon-game">
 	<div class="row">
-		<div class="col s6 word-drop" data-word="apple"><img src="image/apple.jpg"></div>
-		<div class="col s6 word-drop" data-word="orange"><img src="image/orange.jpg"></div>
+		<div class="col s6 word-drop" data-word="kakao"><img src="image/kakao.jpg"></div>
+		<div class="col s6 word-drop" data-word="vaniljsocker"><img src="image/vaniljsocker.jpg"></div>
 	</div>
 	<div class="row">
-		<div class="col s6 word-drop" data-word="grapes"><img src="image/grapes.jpg"></div>
-		<div class="col s6 word-drop" data-word="plum"><img src="image/plum.jpg"></div>
+		<div class="col s6 word-drop" data-word="kokosflingor"><img src="image/kokosflingor.jpg"></div>
+		<div class="col s6 word-drop" data-word="smör"><img src="image/smör.jpg"></div>
 	</div>
 	<div class="row">
 		<div class="col s12">
-			<div data-word="apple" class="word card">apple</div>
-			<div data-word="orange" class="word card">orange</div>
 			<div data-word="ketchup" class="word card">ketchup</div>
-			<div data-word="plum" class="word card">plum</div>
-			<div data-word="grapes" class="word card">grapes</div>
-			<div data-word="wine" class="word card">wine</div>
-			<div data-word="cheese" class="word card">cheese</div>
+			<div data-word="vaniljsocker" class="word card">vaniljsocker</div>
+			<div data-word="strösocker" class="word card">strösocker</div>
+			<div data-word="kokosflingor" class="word card">kokosflingor</div>
+			<div data-word="kakao" class="word card">kakao</div>
+			<div data-word="vatten" class="word card">vatten</div>
+			<div data-word="smör" class="word card">smör</div>
 		</div>
 	</div>
 </div>
