Fixed the lexicon

--- a/lexicon.html
+++ b/lexicon.html
@@ -34,22 +34,21 @@
 <div class="container">
 <div class="section center-align dragndrop-game lexicon-game">
 	<div class="row">
-		<div class="col s6 word-drop" data-word="apple"><img src="image/apple.jpg"></div>
-		<div class="col s6 word-drop" data-word="orange"><img src="image/orange.jpg"></div>
+		<div class="col s6 word-drop" data-word="apple"><img src="image/smör.jpg"></div>
+		<div class="col s6 word-drop" data-word="orange"><img src="image/strösocker.jpg"></div>
 	</div>
 	<div class="row">
-		<div class="col s6 word-drop" data-word="grapes"><img src="image/grapes.jpg"></div>
-		<div class="col s6 word-drop" data-word="plum"><img src="image/plum.jpg"></div>
+		<div class="col s6 word-drop" data-word="grapes"><img src="image/havregryn.jpg"></div>
+		<div class="col s6 word-drop" data-word="plum"><img src="image/vatten.jpg"></div>
 	</div>
 	<div class="row">
 		<div class="col s12">
-			<div data-word="apple" class="word card">apple</div>
-			<div data-word="orange" class="word card">orange</div>
-			<div data-word="ketchup" class="word card">ketchup</div>
-			<div data-word="plum" class="word card">plum</div>
-			<div data-word="grapes" class="word card">grapes</div>
-			<div data-word="wine" class="word card">wine</div>
-			<div data-word="cheese" class="word card">cheese</div>
+			<div data-word="apple" class="word card">vatten</div>
+			<div data-word="orange" class="word card">strösocker</div>
+			<div data-word="ketchup" class="word card">smör</div>
+			<div data-word="plum" class="word card">havregryn</div>
+      <div data-word="plum" class="word card">kokosflingor</div>
+      <div data-word="plum" class="word card">kakao</div>
 		</div>
 	</div>
 </div>
