--- a/viewRecipe.html
+++ b/viewRecipe.html
@@ -29,7 +29,7 @@
 						<i class="fa fa-arrow-left"></i>
 					</a>
 				</div>
-				<span class="recipe-heading" id="recipe-name"></span>
+				<span class="recipe-heading brand-logo" id="recipe-name"></span>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 				</ul>
 			</div>
