fixed word training button

--- a/teachRecipe.html
+++ b/teachRecipe.html
@@ -64,9 +64,9 @@
 			</div>
 		</div>
 	</div>
-  <div class="row">
-    <a class="col s12 waves-effect waves-light btn" href="lexicon.html"><i class="material-icons right">games</i>Träna ord</a>
-  </div>
+
+	<div class="train-recipe-button"><a class="col s12 waves-effect waves-light btn" href="lexicon.html"><i class="material-icons right">games</i>Träna ord</a></div>
+	
 
 	<script>
 		console.log(recipe);
