--- a/viewRecipe.html
+++ b/viewRecipe.html
@@ -34,8 +34,8 @@
 				</ul>
 			</div>
 		</nav>
-	
-	<div class="train-recipe-button"> <a class="btn teal waves-effect waves-light" href="exercise-words.html"> <font>Träna ord</font> <img class="valign-center" style="width: 20px;height:20px;top: 13%" src="image/dumbbell.png"></a> </div>
+
+	<div class="train-recipe-button" href="exercise-words.html"> <a class="btn teal waves-effect waves-light" href="exercise-words.html"> <font>Träna ord</font> <img class="valign-center" style="width: 20px;height:20px;top: 13%" src="image/dumbbell.png"></a> </div>
 
 	  <div class="ingredient-popup-hiddendiv"></div>
 
@@ -117,6 +117,9 @@
 				if (currentInstruction == 0) {
 					step.translation_google.forEach(function(seg) {
 						var translation = seg.split(',');
+            if (translation[0].indexOf("______") >= 0) {
+              
+            }
 						$('#instruction-text-'+currentInstruction).append('<font class="translated-word" data-translation="'+translation[0]+'">'+translation[1]+' </font>');
 					});
 				} else {
@@ -160,10 +163,6 @@
 			});
 
 			$('.ingredient-popup-hiddendiv').click(function(){
-				$('.ingredient-popup-card').slideUp();
-				$('.ingredient-popup-hiddendiv').hide();
-			});
-			$('.ingredient-popup-card').click(function(){
 				$('.ingredient-popup-card').slideUp();
 				$('.ingredient-popup-hiddendiv').hide();
 			});
