Fixed Träna button

--- a/teachRecipe.html
+++ b/teachRecipe.html
@@ -64,7 +64,7 @@
 		</div>
 	</div>
   <div class="row">
-    <a class="col s12 waves-effect waves-light btn"><i class="material-icons right">games</i>Träna ord</a>
+    <a class="col s12 waves-effect waves-light btn" href="lexicon.html"><i class="material-icons right">games</i>Träna ord</a>
   </div>
 
 	<script>
