--- a/lexicon.html
+++ b/lexicon.html
@@ -1,6 +1,6 @@
 <head>
 	<meta charset="UTF-8">
-	<title>WordSoup</title>
+	<title>Laga & Lär</title>
 
 	<!--Import Google Icon Font-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -27,7 +27,7 @@
 				<i class="fa fa-arrow-left"></i>
 			</a>
 		</div>
-		<a href="#" class="brand-logo">WordSoup</a>
+		<a href="#" class="brand-logo">Ord till bild</a>
 	</div>
 </nav>
 
