--- a/recipe-menu.html
+++ b/recipe-menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WordSoup</title>
+    <title>Laga & Lär</title>
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,7 +16,7 @@
 
 <nav>
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo">WordSoup</a>
+        <a href="#" class="brand-logo">Laga & Lär</a>
     </div>
 </nav>
 
