--- a/teachRecipe.html
+++ b/teachRecipe.html
@@ -2,7 +2,7 @@
   <html>
     <head>
 		<meta charset="UTF-8">
-		<title>WordSoup</title>
+		<title>Laga & Lär</title>
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -28,7 +28,7 @@
 						<i class="medium material-icons">skip_previous</i>
 					</a>
 				</div>
-				<span class="recipe-heading">Ord</span>
+				<span class="brand-logo">Ord</span>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 				</ul>
 			</div>
