--- a/exercise-words.html
+++ b/exercise-words.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WordSoup</title>
+    <title>Laga & Lär</title>
 
     <!--Import Google Icon Font-->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
