--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WordSoup</title>
+    <title>Laga & Lär</title>
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,19 +15,10 @@
 <body>
 
 <nav>
-    <div class="nav-wrapper">
-        <a href="#" class="brand-logo">WordSoup</a>
-    </div>
+    <div class="nav-wrapper"></div>
 </nav>
 
- <div class="row">
-    <div class="col s6">
-        <h2>Recept</h2>
-    </div>
-    <div class="col s6" dir="rtl">
-        <h2>وصفة</h2>
-    </div>
-</div>
+<h1 class="center">Laga<br>& Lär</h1>
 
 <div class="row">
    <form class="col s12">
