--- a/teachRecipe.html
+++ b/teachRecipe.html
@@ -13,6 +13,7 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+		<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
 	  <script type="text/javascript" src="recipe.js"></script>
     </head>
 
@@ -24,8 +25,8 @@
 	  <nav>
 			<div class="nav-wrapper">
 				<div class="left">
-					<a href="recipe-menu.html">
-						<i class="medium material-icons">skip_previous</i>
+					<a href="exercise-words.html">
+						<i class="fa fa-arrow-left"></i>
 					</a>
 				</div>
 				<span class="brand-logo">Ord</span>
